<resources>
    <string name="app_name">Sell App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="language_vietnamese">Vietnamese</string>
    <string name="language_chinese">Chinese</string>
    <string name="language_english">English</string>


    <!-- TODO: Remove or change this placeholder text -->
    <!--Đặt tên-->
    <string name="home">Home</string>
    <string name="detailed_toolbar">Detailed Products</string>
    <string name="description">Description</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="added_to_cart">Added To Cart</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Don\'t Have An Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="registration">Registration</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <string name="offer">Offer</string>
    <string name="new_product">New Product</string>
    <string name="my_order">My Order</string>
    <string name="my_cart">My Cart</string>
    <string name="view_all_products">View All Products</string>
    <string name="welcome">We Are Happy To Have You!Get Ready To Buy Fresh and Freeze, Grocery, and Anything You Want.</string>
    <string name="explore_us">Explore Us</string>
    <string name="welcome_to">Welcome To Shopping App</string>
    <string name="popular_products">Popular Products</string>
    <string name="recommended">Recommended</string>
    <string name="explore_products">Explore Products</string>
    <string name="search">Search your item here...</string>
    <string name="your_carts_is_empty">Your Carts Is Empty</string>
    <string name="havent_purchased">You Haven\'t Purchased Anything Yet!</string>
    <string name="no_new_products">Sorry There Is No New Products Yet!</string>
    <string name="your_name">Your name</string>
    <string name="your_email">Your Email</string>
    <string name="your_address">Your Address</string>
    <string name="your_phone">Your Phone</string>
    <string name="price">"Price(VNĐ) : "</string>
    <string name="buy_now">Buy Now</string>
    <string name="product_name">Product Name :</string>
    <string name="product_price">Product Price :</string>
    <string name="current_date">Current Date:</string>
    <string name="current_time">Current Time:</string>
    <string name="total_price">Total Price:</string>
    <string name="total_quantity">Total Quantity</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="your_order">Your Order Has Been Placed</string>
</resources>