<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.sellapp.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.sellapp.fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.sellapp.fragments.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_offers"
        android:name="com.example.sellapp.fragments.OfferFragment"
        android:label="@string/offer"
        tools:layout="@layout/fragment_offer" />
    <fragment
        android:id="@+id/nav_new_products"
        android:name="com.example.sellapp.fragments.NewProductFragment"
        android:label="@string/new_product"
        tools:layout="@layout/fragment_new_product" />
    <fragment
        android:id="@+id/nav_my_orders"
        android:name="com.example.sellapp.fragments.MyOrderFragment"
        android:label="@string/my_order"
        tools:layout="@layout/fragment_my_order" />
    <fragment
        android:id="@+id/nav_my_carts"
        android:name="com.example.sellapp.fragments.MyCartFragment"
        android:label="@string/my_cart"
        tools:layout="@layout/fragment_my_cart" />
</navigation>